--- a/Interruptions/Interruptions.html
+++ b/Interruptions/Interruptions.html
@@ -389,7 +389,7 @@ $(document).ready(function () {
   Back to [NIMBLE Vignettes](https://cyrilmi.github.io/Interruptions/Interruptions.html) 
 --></p>
 <p> </p>
-<p>This script performs a data set simulation and OPSCR modelling in the presence of sampling interuptions with NIMBLE <span class="citation">[@NIMBLE; @deValpine2017]</span>. All details about the procedure are provided in Milleret et al. Estimating abundance with interruption in data collection: Simulations and case studies using open population spatial capture-recapture models.</p>
+<p>This script performs a data set simulation and OPSCR modelling in the presence of sampling interuptions with NIMBLE <span class="citation">(NIMBLE Development Team 2019; Valpine et al. 2017)</span>. All details about the procedure are provided in Milleret et al. Estimating abundance with interruption in data collection: Simulations and case studies using open population spatial capture-recapture models.</p>
 <p> </p>
 <div id="load-libraries" class="section level3">
 <h3>Load Libraries</h3>
@@ -512,6 +512,14 @@ registerDistributions(
 <h3>Define Model Structure</h3>
 <p>Next we define the model struture.</p>
 <p>This uses the two custom distributions defined above.</p>
+<div id="refs" class="references">
+<div id="ref-NIMBLE">
+<p>NIMBLE Development Team. 2019. <em>NIMBLE: MCMC, Particle Filtering, and Programmable Hierarchical Modeling</em>. https://cran.r-project.org/package=nimble: https://cran.r-project.org/package=nimble. <a href="https://doi.org/http://doi.org/10.5281/zenodo.1211190">https://doi.org/http://doi.org/10.5281/zenodo.1211190</a>.</p>
+</div>
+<div id="ref-deValpine2017">
+<p>Valpine, P. de, D. Turek, C.J. Paciorek, C. Anderson-Bergman, D.T. Lang, and R. Bodik. 2017. “Programming with Models: Writing Statistical Algorithms for General Model Structures with Nimble.” <em>Journal of Computational and Graphical Statistics</em> 26 (2): 403–13.</p>
+</div>
+</div>
 </div>
 
 
